--- a/Views/Bikes/Create.cshtml
+++ b/Views/Bikes/Create.cshtml
@@ -9,6 +9,7 @@
 
     <form asp-action="@((Model.Id == 0) ? "Create" : "Edit")" method="post" enctype="multipart/form-data">
         <input type="hidden" asp-for="Id" />
+
         <div class="form-group">
             <label asp-for="BikeName" class="control-label"></label>
             <input asp-for="BikeName" class="form-control" />
@@ -16,27 +17,9 @@
         </div>
 
         <div class="form-group">
-            <label asp-for="Address" class="control-label"></label>
-            <input asp-for="Address" class="form-control" />
-            <span asp-validation-for="Address" class="text-danger"></span>
-        </div>
-
-        <div class="form-group">
             <label asp-for="Price" class="control-label"></label>
             <input asp-for="Price" class="form-control" type="number" step="0.01" />
             <span asp-validation-for="Price" class="text-danger"></span>
-        </div>
-
-        <div class="form-group">
-            <label asp-for="OwnerPhone" class="control-label"></label>
-            <input asp-for="OwnerPhone" class="form-control" />
-            <span asp-validation-for="OwnerPhone" class="text-danger"></span>
-        </div>
-
-        <div class="form-group">
-            <label asp-for="BikeStatus" class="control-label"></label>
-            <input asp-for="BikeStatus" class="form-control" />
-            <span asp-validation-for="BikeStatus" class="text-danger"></span>
         </div>
 
         <div class="form-group">
@@ -54,10 +37,11 @@
             {
                 <div>
                     <img src="@Model.ExistingImg" alt="Bike Image" style="max-width: 200px;" />
-                    <input type="hidden" asp-for="ExistingImg" />
+                    <input type="hidden" asp-for="ExistingImg" value="@Model.ExistingImg" />
                 </div>
             }
         </div>
+
 
         <div class="form-group">
             <label asp-for="LocationId" class="control-label"></label>
