--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿@using BikeSharingApp.Utils
+﻿@using BikeSharingApp.Models
+@using BikeSharingApp.Utils
 @using Microsoft.AspNetCore.Http
 <!DOCTYPE html>
 <html lang="en">
@@ -31,9 +32,6 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="User"
                                 asp-action="ListUsers">Users</a>
                         </li>
@@ -43,6 +41,10 @@
                         </li>
                     </ul>
                     <ul class="navbar-nav">
+                        <li class="nav-item mr-4">
+                            <a class="btn btn-primary " asp-controller="Bikes" asp-action="Create">Create New
+                                Bike</a>
+                        </li>
                         @if (Context.Session.Get<User>("User") != null)
                         {
                             var user = Context.Session.Get<User>("User");
