--- a/Views/Vehicle/Search.cshtml
+++ b/Views/Vehicle/Search.cshtml
@@ -38,7 +38,7 @@
                     <p class="card-text">PricePerHour: $@bike.PricePerHour</p>
                     <p class="card-text">Location: @bike.Location?.Name</p>
                     <p class="card-text text-sm">Description: @bike.Description</p>
-                    <a class="btn btn-info" asp-controller="Bikes" asp-action="Details" asp-route-id="@bike.Id">View
+                    <a class="btn btn-info" asp-controller="Vehicle" asp-action="Details" asp-route-id="@bike.Id">View
                         Details</a>
                 </div>
             </div>
