--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -44,14 +44,14 @@
     <div class="container">
         <form asp-controller="Vehicle" asp-action="Search" method="get">
             <div class="row">
-                  <div class="col-md-3">
-                <select name="location" class="form-control">
-                    <option value="">Địa điểm</option>
-                    @foreach (var location in Model.Locations)
-                    {
-                        <option value="@location.Id">@location.Name</option>
-                    }
-                </select>
+                <div class="col-md-3">
+                    <select name="location" class="form-control">
+                        <option value="">Địa điểm</option>
+                        @foreach (var location in Model.Locations)
+                        {
+                            <option value="@location.Id">@location.Name</option>
+                        }
+                    </select>
                 </div>
                 <div class="col-md-2">
                     <button type="submit" class="btn btn-primary btn-block">Tìm kiếm</button>
@@ -66,21 +66,22 @@
         <div class="row">
             @foreach (var bike in Model.Bikes)
             {
-                    <div class="col-md-4 col-sm-12 mb-4">
-                        <div class="card">
-                            <img src="@(!string.IsNullOrEmpty(bike.Img) ? bike.Img : defaultImage)" class="card-img-top"
-                                alt="@bike.BikeName">
-                            <div class="card-body">
-                                <h5 class="card-title">@bike.BikeName</h5>
-                                <p class="card-text">Price: $@bike.Price</p>
-                                <p class="card-text">PricePerHour: $@bike.PricePerHour</p>
-                                <p class="card-text">Location: @bike.Location?.Name</p>
-                                <p class="card-text text-sm">Description: @bike.Description</p>
-                                <a class="btn btn-info" asp-controller="Bikes" asp-action="Details" asp-route-id="@bike.Id">View
-                                    Details</a>
-                            </div>
+                <div class="col-md-4 col-sm-12 mb-4">
+                    <div class="card">
+                        <img src="@(!string.IsNullOrEmpty(bike.Img) ? bike.Img : defaultImage)" class="card-img-top"
+                            alt="@bike.BikeName">
+                        <div class="card-body">
+                            <h5 class="card-title">@bike.BikeName</h5>
+                            <p class="card-text">Price: $@bike.Price</p>
+                            <p class="card-text">PricePerHour: $@bike.PricePerHour</p>
+                            <p class="card-text">Location: @bike.Location?.Name</p>
+                            <p class="card-text text-sm">Description: @bike.Description</p>
+                            <a class="btn btn-info" asp-controller="Vehicle" asp-action="Details"
+                                asp-route-id="@bike.Id">View
+                                Details</a>
                         </div>
                     </div>
+                </div>
             }
         </div>
     </div>
