--- a/Views/Vehicle/Book.cshtml
+++ b/Views/Vehicle/Book.cshtml
@@ -79,6 +79,19 @@
 </style>
 
 <div class="container my-5">
+    @if (TempData["ErrorMessage"] != null)
+    {
+        <div class="alert alert-danger">
+            @TempData["ErrorMessage"]
+        </div>
+    }
+
+    @if (TempData["SuccessMessage"] != null)
+    {
+        <div class="alert alert-success">
+            @TempData["SuccessMessage"]
+        </div>
+    }
     <div class="booking-form">
         <div class="detail-bike">
             <div class="image-container mb-4">
